--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,18 +39,17 @@
   --color-black: #101828;
 
   --color-brand-25: #f2f7ff;
-  --color-brand-50: #ecf3ff;
-  --color-brand-100: #dde9ff;
-  --color-brand-200: #c2d6ff;
-  --color-brand-300: #9cb9ff;
-  --color-brand-400: #7592ff;
-  --color-brand-500: #465fff;
-  --color-brand-600: #3641f5;
-  --color-brand-700: #2a31d8;
-  --color-brand-800: #252dae;
-  --color-brand-900: #262e89;
-  --color-brand-950: #161950;
-
+  --color-brand-50: #eaf5f1;
+  --color-brand-100: #d6eae3;
+  --color-brand-200: #b3d9cd;
+  --color-brand-300: #8cc7b5;
+  --color-brand-400: #5fa993;
+  --color-brand-500: #2c7c68;
+  --color-brand-600: #256f5d;
+  --color-brand-700: #1e5e4f;
+  --color-brand-800: #184d41;
+  --color-brand-900: #113b33;
+  --color-brand-950: #0b2622;
   --color-blue-light-25: #f5fbff;
   --color-blue-light-50: #f0f9ff;
   --color-blue-light-100: #e0f2fe;
@@ -148,7 +147,7 @@
     0px 20px 24px -4px rgba(16, 24, 40, 0.08),
     0px 8px 8px -4px rgba(16, 24, 40, 0.03);
   --shadow-datepicker: -5px 0 0 #262d3c, 5px 0 0 #262d3c;
-  --shadow-focus-ring: 0px 0px 0px 4px rgba(70, 95, 255, 0.12);
+  --shadow-focus-ring: 0px 0px 0px 4px rgba(44, 124, 104, 0.12);
   --shadow-slider-navigation:
     0px 1px 2px 0px rgba(16, 24, 40, 0.1), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
   --shadow-tooltip:
